--- a/tool.html
+++ b/tool.html
@@ -80,7 +80,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       </div>
       <div id="enterUserName" style="display:none;">
         Enter name:
-        <input id="userEnter" type="text" style="width:120px;" tabindex="0" value="" title="Enter the object\'s name here. Avoid application specific names, codes, long descriptions. Use a name you think other people would agree in using." />
+        <input id="userEnter" type="text" style="width:120px;" tabindex="0" value="" title="Enter what aspect of the photo you selected. Ex: Hair, smile, tie, pose. Avoid application specific names, codes, long descriptions. Use a name you think other people would agree in using." />
       </div>
     </div>
   </div>
