Update mt instructions and make bubble wider

--- a/annotationTools/html/mt_instructions.html
+++ b/annotationTools/html/mt_instructions.html
@@ -87,51 +87,45 @@ MM_reloadPage(true);
     </tr>
     <tr> 
       <td><p><font size="5">Examples</font></p>
-      <p><b>Good object labels:</b></p>
+      <p><b>Good feature annotations:</b></p>
 
       <table>
       <tr>
-      <td align="center"><img src="../../Icons/mt_example_good3.jpg" height="200" /></td>
-      <td align="center"><img src="../../Icons/mt_example_good2.jpg" height="200" /></td>
-      <td align="center"><img src="../../Icons/mt_example_good4.jpg" height="200" /></td>
-      <td align="center"><img src="../../Icons/mt_example_good5.jpg" height="200" /></td>
+      <td align="center"><img src="../../Icons/Instructions/goodSelection1.jpg" height="200" /></td>
+      <td align="center"><img src="../../Icons/Instructions/goodSelection2.jpg" height="200" /></td>
+      <td align="center"><img src="../../Icons/Instructions/goodSelection1.jpg" height="200" /></td>
       </tr>
       <tr>
       <td align="center">
-      <b>building</b>
+      <b>hair</b>
       </td>
       <td align="center">
-      <b>tree</b>
+      <b>smile</b>
       </td>
       <td align="center">
-      <b>ship</b>
-      </td>
-      <td align="center">
-      <b>person</b>
+      <b>hair</b>
       </td>
       </tr>
       </table>
 
-      <p><b>Bad object labels:</b></p>
+      <p><b>Bad feature annotations:</b></p>
 
       <table>
       <tr>
-      <td align="center"><img src="../../Icons/mt_example_bad1.jpg" height="200" /></td>
-      <td align="center"><img src="../../Icons/mt_example_bad2.jpg" height="200" /></td>
-      <td align="center"><img src="../../Icons/mt_example_bad3.jpg" height="200" /></td>
+      <td align="center"><img src="../../Icons/Instructions/badSelection1.jpg" height="200" /></td>
+      <td align="center"><img src="../../Icons/Instructions/badSelection2.jpg" height="200" /></td>
+      <td align="center"><img src="../../Icons/Instructions/badSelection3.jpg" height="200" /></td>
       </tr>
       <tr>
       <td align="center" width="250">
-      The building is not entirely labeled.  Make
-      sure to scroll to view the entire object.
+      The annotation goes beyond her hair. Make
+      sure to only select the part of the image that includes what you are annotating.
       </td>
       <td align="center" width="250">
-      The same cloud is labeled twice.  Please do not label an object that
-      has already been labeled.
+      The selection does not follow the contour of her smile. Please outline the object you are selecting. Do not just draw a bounding box.
       </td>
       <td align="center" width="250">
-      There are three people inside this polygon.  Whenever possible,
-      please label individual objects and follow closely their boundary.
+      The selection does not include the entire feature. Please outline the entire feature, not just part of it.
       </td>
       </tr>
       </table>
